# trading-strategy-team

./: .gitignore  Dockerfile  LICENSE  README.md  README_en.md  docker-compose.db.yml  docker-compose.yml  init.sql  pyproject.toml  run.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
prisma/: chat.prisma  schema.prisma  user.prisma
src/: config.py  main.py
src/agents/chartAnalysis/: graph.py  node.py  prompt.py  state.py
src/agents/chartAnalysisAgent/: graph.py  node.py  prompt.py  state.py
src/agents/factor/: graph.py  node.py  state.py
src/agents/factorAgent/: graph.py  node.py  prompt.py
src/agents/idea/: graph.py  ideaAgent.py  node.py  state.py
src/agents/ideaAgent/: graph.py  ideaAgent.py  node.py  run_test.py  state.py
src/agents/investment/: graph.py  node.py  state.py
src/agents/practiceAgent/: graph.py  node.py  state.py
src/agents/supervisor/: graph.py  node.py  state.py
src/agents/tools/: chartTool.py  kisTool.py
src/agents/tradeAgent/: graph.py  state.py  tradeNode.py
src/agents/tradingAgent/: prompt.py  tradingAgent.py
src/contorllers/: agent.py  index.py  kis.py
src/controllers/: agent.py  chartAnalysis.py  chat.py  index.py  kis.py  user.py
src/databases/: db.py
src/dtos/chat/: chatDto.py  (+1 more)
src/guards/: jwt.py  jwtGuard.py
src/notebooks/: Alpha_Tree.ipynb  Backtesting_Quickstart.ipynb  FactorAgent.ipynb
src/services/: agent.py  chartAnalysis.py  chat.py  kis.py  practice.py  tradeAgent.py  tradingAgent.py  user.py
src/utils/: baseNode.py  graphBuilder.py
(+14 files in other folders)
