[tool.poetry]
name = "financial-trading-server"
version = "0.1.0"
description = "A server for financial trading"
authors = ["michael <7471919@naver.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
uvicorn = ">=0.34.0,<0.35.0"
fastapi = ">=0.115.11,<0.116.0"
python-dotenv = ">=1.0.1,<2.0.0"
langchain-openai = ">=0.3.8,<0.4.0"
langgraph = ">=0.3.10,<0.4.0"
anytree = "^2.12.1"
numpy = "1.26.4"
pandas = "^2.2.3"
yfinance = "^0.2.55"
matplotlib = "^3.10.1"
lxml = "^5.3.2"
lark = "^1.2.2"
langchain-experimental = "^0.3.4"
prisma = "^0.15.0"
pydantic = {extras = ["email"], version = "^2.11.3"}
bcrypt = "^4.3.0"
python-jose = "^3.4.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"